[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/gomask2d/_examples/Terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/gomask2d/_examples/icon.png" type="Texture" id=2]
[ext_resource path="res://addons/gomask2d/_examples/ExampleDrawCanvas.gd" type="Script" id=3]
[ext_resource path="res://addons/gomask2d/_examples/Mask2DParticle.tscn" type="PackedScene" id=4]

[node name="ExampleDrawCanvas" type="Node2D"]
script = ExtResource( 3 )

[node name="Gui" type="CanvasLayer" parent="."]
layer = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Gui"]
margin_right = 206.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawCanvasCbx" type="CheckBox" parent="Gui/VBoxContainer"]
margin_right = 206.0
margin_bottom = 24.0
pressed = true
text = "Draw Canvas"

[node name="DrawCustomCanvasCbx" type="CheckBox" parent="Gui/VBoxContainer"]
margin_top = 28.0
margin_right = 206.0
margin_bottom = 52.0
text = "Draw Custom Canvas"

[node name="DrawWithViewportTextureCbx" type="CheckBox" parent="Gui/VBoxContainer"]
margin_top = 56.0
margin_right = 206.0
margin_bottom = 80.0
text = "Draw With Viewport Texture"

[node name="HSeparator" type="HSeparator" parent="Gui/VBoxContainer"]
margin_top = 84.0
margin_right = 206.0
margin_bottom = 88.0

[node name="Button" type="Button" parent="Gui/VBoxContainer"]
margin_top = 92.0
margin_right = 206.0
margin_bottom = 112.0
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="CanvasLayer" parent="."]

[node name="ViewportContainer" type="ViewportContainer" parent="Viewport"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Viewport/ViewportContainer"]
size = Vector2( 640, 360 )
size_override_stretch = true
own_world = true
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
gui_snap_controls_to_pixels = false

[node name="Terrain" parent="." instance=ExtResource( 1 )]

[node name="icon" type="Sprite" parent="."]
position = Vector2( 248.742, 127.57 )
texture = ExtResource( 2 )

[node name="Mask2DParticle" parent="." instance=ExtResource( 4 )]
one_shot = true
speed_scale = 2.0
local_coords = false
color_ramp = null

[connection signal="button_down" from="Gui/VBoxContainer/Button" to="." method="_on_Button_button_down"]
